broswer compat: fixed overlapping psm/dropdown menu in IE6 and IE7.  removed close button in those browsers only.  An imperfect solution, but is fine for now.
git-svn-id: https://svn.socialplanning.org/svn/opencore/trunk/opencore@7879 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/nui/css/ie.css
+++ b/nui/css/ie.css
@@ -23,7 +23,10 @@ fieldset.oc-boxy legend {
 	  float: left; /* makes it so border shows up around legend */
 }
 .oc-statusMessage {
-  border-top: 3px solid; /* for some reason the top border is getting chopped off */
+  position: static; /* avoids overlapping the topnav menu */
+}
+.oc-statusMessage .oc-close {
+  display: none;
 }
 .oc-statusMessage .oc-closeButton { /* overridden in IE6.css */
   width: 7px;
