--- a/nui/css/ie6.css
+++ b/nui/css/ie6.css
@@ -6,9 +6,7 @@
 
 legend { color: #000; padding: 0; margin: 0 -5px;}
 
-.oc-statusMessage {
-  border-top: 3px solid; /* for some reason the top border is getting chopped off */
-}
+
 .oc-statusMessage .oc-closeButton {
   width: 7px;
   top: 2px;
